[gd_scene load_steps=6 format=2]

[ext_resource path="res://imports/DarkUnderground.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/win_lose_menu/win_lose_menu.gd" type="Script" id=3]
[ext_resource path="res://resources/runtime_data.tres" type="Resource" id=4]

[sub_resource type="DynamicFont" id=1]
size = 65
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="WinLoseMenu" type="Spatial"]
script = ExtResource( 3 )
runtime_data = ExtResource( 4 )

[node name="Win_Text" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -473.0
margin_top = -239.0
margin_right = 473.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=5][center]You Win[/center][/wave]"
text = "You Win"
scroll_active = false

[node name="Push Space to Play Again" type="RichTextLabel" parent="Win_Text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -473.0
margin_top = -7.5
margin_right = 473.0
margin_bottom = 68.5
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Push Space to Play Again[/center]"
text = "Push Space to Play Again"
scroll_active = false

[node name="Lose_Text" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -473.0
margin_top = -239.0
margin_right = 473.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=1][center]You Lost[/center][/wave]"
text = "You Lost"
scroll_active = false

[node name="Push Space to Play Again" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -473.0
margin_top = -91.0
margin_right = 473.0
margin_bottom = -15.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Push Space to Play Again[/center]"
text = "Push Space to Play Again"
scroll_active = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
